fix: correção no AllowedOriginPatterns, definindo a lógica correta para funcionamento em produção
Signed-off-by: Brehcore <brehcore@gmail.com>